# MyBigCProject

./: Makefile  Makefile.in  README.md  bootstrap  config.h  config.status  configure  configure.ac
autom4te.cache/: output.1  output.2  requests  traces.0  traces.1
includes/: project.h
src/: Makefile  Makefile.am  Makefile.in  main.c  module1.c  module1.h  module2.c  module2.h
tests/: Makefile  Makefile.am  Makefile.in  test_module1.c
